cambiameti effettuati
modified:   Main.java
modified:   controller/AppController.java
modified:   controller/CustomizationController.java
modified:   utils/Config.java
modified:   view/GamePanel.java
modified:   view/GeneralCustomizationPanel.java
modified:   view/LeaderboardPanel.java
modified:   view/StartPanel.java
modified:   view/VehicleCustomizationPanel.java